fixed star jumping, improved page contrast, replaced dark logos with light ones

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 :root{
-  background-color: #121E2F;
+  background-color: #0c1521;
 }
 
